language/move-lang/tests/move_check/expansion/pack_no_fields_single_block_expr.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/pack_no_fields_single_block_expr.move:4:21
  │
4 │         let s = S { false };
  │                     ^^^^^
  │                     │
  │                     Unexpected 'false'
  │                     Expected an identifier

